@@ -1,4 +1,9 @@
 Next:
+  - M_EGA display mode now applies CRTC BYTE/WORD/DWORD shift to display
+    start address, same as M_VGA, to ensure correct display when demos
+    and games set the CRTC to non-BYTE modes. This fixes page flipping
+    flickering during the "Vectorballs" part of "Unreal" by Future Crew.
+    (joncampbell123).
   - Update Configuration GUI to use radio buttons for selection, meaning the
     circular buttons that resemble those in Windows, not the check boxes.
     The GUI toolkit had them all along, the Configuration GUI was using
